--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyFolio - Cebotaru Daniel</title>
     <link rel="icon" href="/images/blob.svg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -79,7 +79,11 @@
                   </div>
                 </div>
               </div>
-              <div class="rightpart" data-aos="fade-up" data-aos-duration="2000">
+              <div
+                class="rightpart"
+                data-aos="fade-up"
+                data-aos-duration="2000"
+              >
                 <img src="images/Website SVG/rightpart.svg" alt="image" />
               </div>
             </div>
@@ -123,6 +127,11 @@
                     it into a functioning website, ensuring that it looks and
                     behaves as intended across different devices and platforms.
                   </p>
+									<div class="socials">
+										<img src="/images/socialmedia/iconmonstr-github-1.svg" alt="">
+										<img src="/images/socialmedia/iconmonstr-linkedin-4.svg" alt="">
+										<img src="/images/socialmedia/iconmonstr-twitter-4.svg" alt="">
+									</div>
                 </div>
               </div>
             </div>
@@ -297,15 +306,63 @@
               <h1>My Projects</h1>
               <div class="cards">
                 <div class="row1">
-                  <div class="card1"></div>
-                  <div class="card1"></div>
-                  <div class="card1"></div>
+                  <div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="100">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
+									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="300">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
+									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
                 </div>
 
                 <div class="row1">
-                  <div class="card1"></div>
-                  <div class="card1"></div>
-                  <div class="card1"></div>
+                  <div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="700">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
+									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="900">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
+									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1100">
+										<img src="/images/1website.png" alt="">
+										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
+										<div class="usedskills">
+											<img src="/images/skill/174854.png" alt="">
+											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
+											<img src="/images/skill/javascript.png" alt="">
+										</div>
+									</div>
                 </div>
               </div>
             </div>
@@ -323,6 +380,6 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="main.js" defer></script>
+    <script src="/js/main.js" defer></script>
   </body>
 </html>
