--- a/index.html
+++ b/index.html
@@ -127,11 +127,20 @@
                     it into a functioning website, ensuring that it looks and
                     behaves as intended across different devices and platforms.
                   </p>
-									<div class="socials">
-										<img src="/images/socialmedia/iconmonstr-github-1.svg" alt="">
-										<img src="/images/socialmedia/iconmonstr-linkedin-4.svg" alt="">
-										<img src="/images/socialmedia/iconmonstr-twitter-4.svg" alt="">
-									</div>
+                  <div class="socials">
+                    <img
+                      src="/images/socialmedia/iconmonstr-github-1.svg"
+                      alt=""
+                    />
+                    <img
+                      src="/images/socialmedia/iconmonstr-linkedin-4.svg"
+                      alt=""
+                    />
+                    <img
+                      src="/images/socialmedia/iconmonstr-twitter-4.svg"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -306,63 +315,129 @@
               <h1>My Projects</h1>
               <div class="cards">
                 <div class="row1">
-                  <div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="100">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
-									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="300">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
-									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="100"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="300"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="500"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
                 </div>
 
                 <div class="row1">
-                  <div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="700">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
-									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="900">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
-									<div class="card1" data-aos="zoom-in-up" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1100">
-										<img src="/images/1website.png" alt="">
-										<a href="https://site-mobila.netlify.app/" target="_blank"><h3>Furniture Website</h3></a>
-										<div class="usedskills">
-											<img src="/images/skill/174854.png" alt="">
-											<img src="/images/skill/Tailwind_CSS_Logo.svg.png" alt="">
-											<img src="/images/skill/javascript.png" alt="">
-										</div>
-									</div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="700"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="900"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
+                  <div
+                    class="card1"
+                    data-aos="zoom-in-up"
+                    data-aos-duration="1500"
+                    data-aos-once="true"
+                    data-aos-delay="1100"
+                  >
+                    <img src="/images/1website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Furniture Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -380,6 +455,12 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.0.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/js/main.js" defer></script>
   </body>
 </html>
