--- a/index.html
+++ b/index.html
@@ -128,18 +128,21 @@
                     behaves as intended across different devices and platforms.
                   </p>
                   <div class="socials">
-                    <img
-                      src="/images/socialmedia/iconmonstr-github-1.svg"
-                      alt=""
-                    />
-                    <img
-                      src="/images/socialmedia/iconmonstr-linkedin-4.svg"
-                      alt=""
-                    />
-                    <img
-                      src="/images/socialmedia/iconmonstr-twitter-4.svg"
-                      alt=""
-                    />
+                    <a target="_blank" href="https://github.com/CebotaruDaniel">
+                      <img
+                        src="/images/socialmedia/iconmonstr-github-1.svg"
+                        alt="github"
+                    /></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/">
+                      <img
+                        src="/images/socialmedia/iconmonstr-linkedin-4.svg"
+                        alt="linkedin"
+                    /></a>
+                    <a target="_blank" href="">
+                      <img
+                        src="/images/socialmedia/iconmonstr-twitter-4.svg"
+                        alt="twitter"
+                    /></a>
                   </div>
                 </div>
               </div>
