--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
                     data-aos-once="true"
                     data-aos-delay="300"
                   >
-                    <img src="/images/1website.png" alt="" />
+                    <img src="/images/2website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
+                      ><h3>Fragrance Website</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
                       <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        src="/images/skill/sass.png"
                         alt=""
                       />
                       <img src="/images/skill/javascript.png" alt="" />
@@ -365,14 +365,14 @@
                     data-aos-once="true"
                     data-aos-delay="500"
                   >
-                    <img src="/images/1website.png" alt="" />
+                    <img src="/images/3website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
+                      ><h3>Internship Website</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
                       <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        src="/images/skill/css.png"
                         alt=""
                       />
                       <img src="/images/skill/javascript.png" alt="" />
@@ -388,9 +388,9 @@
                     data-aos-once="true"
                     data-aos-delay="700"
                   >
-                    <img src="/images/1website.png" alt="" />
+                    <img src="/images/4website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
+                      ><h3>Cereal Website</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
@@ -399,48 +399,10 @@
                         alt=""
                       />
                       <img src="/images/skill/javascript.png" alt="" />
+											<img src="/images/skill/php.png" alt="" />
                     </div>
                   </div>
-                  <div
-                    class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="900"
-                  >
-                    <img src="/images/1website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
-                    >
-                    <div class="usedskills">
-                      <img src="/images/skill/174854.png" alt="" />
-                      <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
-                        alt=""
-                      />
-                      <img src="/images/skill/javascript.png" alt="" />
-                    </div>
-                  </div>
-                  <div
-                    class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="1100"
-                  >
-                    <img src="/images/1website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
-                    >
-                    <div class="usedskills">
-                      <img src="/images/skill/174854.png" alt="" />
-                      <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
-                        alt=""
-                      />
-                      <img src="/images/skill/javascript.png" alt="" />
-                    </div>
-                  </div>
+
                 </div>
               </div>
             </div>
