--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="introname">
                     <h1 class="introtext text">Hey, I'm Daniel</h1>
                     <h1 class="introtext2 text">
-                      UI-UX Design and Front-End Developer
+                      UI-UX Design & Front-End Developer
                     </h1>
                     <p class="intro_paragraph text">
                       I have good knowledge in web development, interfaces and
@@ -104,9 +104,6 @@
               <div class="servicecards">
                 <div
                   class="meow"
-                  data-aos="fade-down-right"
-                  data-aos-duration="2500"
-                  data-aos-once="true"
                 >
                   <img
                     src="images/503 Error Service Unavailable-cuate.svg"
@@ -116,9 +113,6 @@
 
                 <div
                   class="cardd"
-                  data-aos="fade-up"
-                  data-aos-anchor-placement="bottom-bottom"
-                  data-aos-once="true"
                 >
                   <p>
                     My name is <span class="cardspan">Cebotaru Daniel</span>. I
@@ -133,7 +127,10 @@
                         src="/images/socialmedia/iconmonstr-github-1.svg"
                         alt="github"
                     /></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/">
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/"
+                    >
                       <img
                         src="/images/socialmedia/iconmonstr-linkedin-4.svg"
                         alt="linkedin"
@@ -154,10 +151,6 @@
                 <div class="pros">
                   <div
                     class="prosdiv"
-                    data-aos="zoom-in"
-                    data-aos-duration="1200"
-                    data-aos-once="true"
-                    data-aos-delay="100"
                   >
                     <img
                       class="hoversvg"
@@ -172,10 +165,6 @@
                   </div>
                   <div
                     class="prosdiv"
-                    data-aos="zoom-in"
-                    data-aos-duration="1200"
-                    data-aos-once="true"
-                    data-aos-delay="300"
                   >
                     <img
                       class="hoversvg"
@@ -187,10 +176,6 @@
                   </div>
                   <div
                     class="prosdiv"
-                    data-aos="zoom-in"
-                    data-aos-duration="1200"
-                    data-aos-once="true"
-                    data-aos-delay="500"
                   >
                     <img
                       class="hoversvg"
@@ -202,10 +187,6 @@
                   </div>
                   <div
                     class="prosdiv"
-                    data-aos="zoom-in"
-                    data-aos-duration="1200"
-                    data-aos-delay="600"
-                    data-aos-once="true"
                   >
                     <img
                       class="hoversvg"
@@ -228,33 +209,21 @@
                     <div class="skillrow">
                       <div
                         class="skill"
-                        data-aos="fade-left"
-                        data-aos-once="true"
-                        data-aos-delay="100"
                       >
                         <img src="/images/skill/174854.png" alt="" />
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-left"
-                        data-aos-once="true"
-                        data-aos-delay="300"
                       >
                         <img src="/images/skill/css.png" alt="" />
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-left"
-                        data-aos-once="true"
-                        data-aos-delay="500"
                       >
                         <img src="/images/skill/javascript.png" alt="" />
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-left"
-                        data-aos-once="true"
-                        data-aos-delay="600"
                       >
                         <img
                           src="/images/skill/Tailwind_CSS_Logo.svg.png"
@@ -267,17 +236,11 @@
                     <div class="skillrow">
                       <div
                         class="skill"
-                        data-aos="fade-right"
-                        data-aos-once="true"
-                        data-aos-delay="700"
                       >
                         <img src="/images/skill/Git-Icon-1788C.png" alt="" />
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-right"
-                        data-aos-once="true"
-                        data-aos-delay="500"
                       >
                         <img
                           src="/images/skill/Bootstrap_logo.svg.png"
@@ -286,17 +249,11 @@
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-right"
-                        data-aos-once="true"
-                        data-aos-delay="300"
                       >
                         <img src="/images/skill/react.png" alt="" />
                       </div>
                       <div
                         class="skill"
-                        data-aos="fade-right"
-                        data-aos-once="true"
-                        data-aos-delay="100"
                       >
                         <img src="/images/skill/sass.png" alt="" />
                       </div>
@@ -320,10 +277,6 @@
                 <div class="row1">
                   <div
                     class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="100"
                   >
                     <img src="/images/1website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
@@ -338,12 +291,9 @@
                       <img src="/images/skill/javascript.png" alt="" />
                     </div>
                   </div>
+
                   <div
                     class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="300"
                   >
                     <img src="/images/2website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
@@ -351,19 +301,30 @@
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
-                      <img
-                        src="/images/skill/sass.png"
-                        alt=""
-                      />
+                      <img src="/images/skill/sass.png" alt="" />
                       <img src="/images/skill/javascript.png" alt="" />
                     </div>
                   </div>
+
+									<div
+									class="card1"
+								>
+									<img src="/images/4website.png" alt="" />
+									<a href="https://site-mobila.netlify.app/" target="_blank"
+										><h3>Cereal Website</h3></a
+									>
+									<div class="usedskills">
+										<img src="/images/skill/174854.png" alt="" />
+										<img
+											src="/images/skill/Tailwind_CSS_Logo.svg.png"
+											alt=""
+										/>
+										<img src="/images/skill/javascript.png" alt="" />
+										<img src="/images/skill/php.png" alt="" />
+									</div>
+								</div>
                   <div
                     class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="500"
                   >
                     <img src="/images/3website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
@@ -371,37 +332,11 @@
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
-                      <img
-                        src="/images/skill/css.png"
-                        alt=""
-                      />
+                      <img src="/images/skill/sass.png" alt="" />
                       <img src="/images/skill/javascript.png" alt="" />
                     </div>
                   </div>
-                </div>
 
-                <div class="row1">
-                  <div
-                    class="card1"
-                    data-aos="zoom-in-up"
-                    data-aos-duration="1500"
-                    data-aos-once="true"
-                    data-aos-delay="700"
-                  >
-                    <img src="/images/4website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Cereal Website</h3></a
-                    >
-                    <div class="usedskills">
-                      <img src="/images/skill/174854.png" alt="" />
-                      <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
-                        alt=""
-                      />
-                      <img src="/images/skill/javascript.png" alt="" />
-											<img src="/images/skill/php.png" alt="" />
-                    </div>
-                  </div>
 
                 </div>
               </div>
@@ -427,5 +362,6 @@
     <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/js/main.js" defer></script>
+		
   </body>
 </html>
